# bitmessage-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
app/: Cargo.toml
app/src/: app.rs  main.rs  network.rs  pow.rs  repositories.rs
app/src/components/: identities_list.rs  message_composer.rs  messages_content.rs  messages_sidebar.rs  network_status.rs
app/src/components/dialogs/: mod.rs
app/src/components/factories/: identity_list_row.rs  mod.rs
app/src/network/: messages.rs  node.rs
app/src/network/node/: worker.rs
app/src/repositories/sqlite/: inventory.rs  models.rs
app/src/repositories/sqlite/migrations/2023-05-07-225624_init_schema/: up.sql
app/src/ui/: app.rs
app/src/ui/components/: messages_content.rs  messages_sidebar.rs  mod.rs
app/src/ui/components/utils/: mod.rs  typed_list_view.rs
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml  diesel.toml
core/src/: lib.rs  network.rs  pow.rs  repositories.rs
core/src/network/: address.rs  behaviour.rs  messages.rs  node.rs
core/src/network/node/: client.rs  handler.rs  pow_worker.rs  worker.rs
core/src/pow/: async_pow.rs  sync_pow.rs
core/src/repositories/: address.rs  inventory.rs  message.rs  sqlite.rs
core/src/repositories/sqlite/: address.rs  inventory.rs  message.rs  models.rs  schema.rs
core/src/repositories/sqlite/migrations/: 20230907231609_init_schema.down.sql  20230907231609_init_schema.up.sql  20230907231717_add_label.down.sql  20230907231717_add_label.up.sql  20230909214253_drop_non_null_nonce.down.sql  20230909214253_drop_non_null_nonce.up.sql
core/src/repositories/sqlite/migrations/2023-05-07-225624_init_schema/: down.sql
devzone/: docker-compose.yaml
src/: main.rs  network.rs  pow.rs  protocol.rs  repositories.rs
src/network/: address.rs  behaviour.rs  messages.rs  node.rs
src/network/node/: client.rs  handler.rs  worker.rs
src/protocol/: address.rs  messages.rs
src/repositories/: address.rs  inventory.rs  memory.rs  message.rs
src/repositories/memory/: address.rs  inventory.rs
src/repositories/sqlite/: address.rs  inventory.rs  message.rs  models.rs  schema.rs
src/repositories/sqlite/migrations/2023-05-07-225624_init_schema/: up.sql
src/repositories/sqlite/migrations/2023-05-18-000504_add_label/: down.sql  up.sql
src/ui/: app.rs  mod.rs  state.rs
src/ui/components/: identities_list.rs  message_composer.rs  messages.rs  messages_content.rs  messages_sidebar.rs  mod.rs  network_status.rs
src/ui/components/dialogs/: identity_dialog.rs
src/ui/components/factories/: identity_list_row.rs
src/ui/components/utils/: typed_list_view.rs
