[package]
name = "bitmessage-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayref = "0.3.7"
async-std = { version = "1.12.0", features = ["attributes"] }
async-trait = "0.1.68"
bs58 = "0.4.0"
bytes = "1.4.0"
chrono = "0.4.24"
diesel = { version = "2.0.4", features = ["sqlite", "chrono", "r2d2"] }
diesel_migrations = { version = "2.0.0", features = ["sqlite"] }
ecies = "0.2.3"
erased-serde = "0.3.25"
futures = "0.3.28"
hmac-sha512 = "1.1.4"
libp2p = { version = "0.51.3", features = ["async-std", "dns", "macros", "noise", "ping", "tcp", "websocket", "yamux", "gossipsub", "request-response", "kad", "identify", "mdns"] }
libsecp256k1 = "0.7.1"
log = "0.4.17"
multiaddr = "0.17.1"
pretty_env_logger = "0.4.0"
ripemd = "0.1.3"
serde = { version = "1.0.160", features = ["derive"] }
serde_cbor = "0.11.2"
serde_repr = "0.1.12"
sha2 = "0.10.6"
signal-hook = "0.3.15"
thiserror = "1.0.40"
void = "1.0.2"
xdg = "2.5.0"
