[package]
name = "bitmessage-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayref = "0.3.7"
async-std = { version = "1.12.0", features = ["attributes"] }
async-trait = "0.1.68"
bs58 = "0.4.0"
bytes = "1.4.0"
chrono = "0.4.24"
diesel = { version = "2.0.4", features = ["sqlite", "chrono", "r2d2"] }
diesel_migrations = { version = "2.0.0", features = ["sqlite"] }
ecies = "0.2.3"
erased-serde = "0.3.25"
futures = "0.3.28"
hmac-sha512 = "1.1.4"
libp2p = { version = "0.51.3", features = ["async-std", "dns", "macros", "noise", "ping", "tcp", "websocket", "yamux", "gossipsub", "request-response", "kad", "identify", "mdns"] }
libsecp256k1 = "0.7.1"
log = "0.4.17"
multiaddr = "0.17.1"
pretty_env_logger = "0.4.0"
ripemd = "0.1.3"
serde = { version = "1.0.160", features = ["derive"] }
serde_cbor = "0.11.2"
serde_repr = "0.1.12"
sha2 = "0.10.6"
signal-hook = "0.3.15"
thiserror = "1.0.40"
void = "1.0.2"
relm4 = { version="0.6.0-beta.1", features = ["libadwaita"] }
relm4-components = "0.6.0-beta.1"
relm4-icons = { version = "0.6.0-beta.6", features = ["person", "mail-inbox-filled", "desktop-pulse-filled", "plus", "pencil-and-paper", "x-circular", "edit"] }
directories = "5.0.1"
rand = { version = "0.8.5", features = ["getrandom"] }
identicon-rs = "4.0.1"
adw = { package = "libadwaita", version = "0.3.1", features = ["gtk_v4_6", "v1_3"] }
gtk = { package = "gtk4",version = "0.6.6", features = ["v4_10"] }
mail-parser = "0.8.2"
strum = { version = "0.24", features = ["derive"] }
emailmessage = "0.2.2"