[package]
name = "nantoka-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.2", features = ["derive"] }
nantoka-core = { workspace = true }
async-std = { workspace = true }
signal-hook = "0.3.15"
log = { workspace = true }
pretty_env_logger = { workspace = true }
