[package]
name = "nantoka-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
log = { workspace = true }
libp2p = { version = "0.51.3", features = ["async-std", "dns", "macros", "noise", "ping", "tcp", "websocket", "yamux", "gossipsub", "request-response", "kad", "identify", "mdns"] }
async-std = { workspace = true }
chrono = { workspace = true }
diesel = { version = "2.0.4", features = ["sqlite", "chrono", "r2d2"] }
diesel_migrations = { version = "2.0.0", features = ["sqlite"] }
ecies = "0.2.3"
serde = { version = "1.0.160", features = ["derive"] }
serde_cbor = "0.11.2"
serde_repr = "0.1.12"
erased-serde = "0.3.25"
ripemd = "0.1.3"
sha2 = "0.10.6"
num-bigint = "0.4.3"
once_cell = "1.18.0"
num_cpus = "1.15.0"
libsecp256k1 = "0.7.1"
bs58 = "0.4.0"
bytes = "1.4.0"
futures = "0.3.28"
multiaddr = "0.17.1"
pretty_env_logger = { workspace = true }
rand = { version = "0.8.5", features = ["getrandom"] }
thiserror = "1.0.40"
emailmessage = "0.2.2"
void = "1.0.2"
strum = { version = "0.24", features = ["derive"] }
directories = { workspace = true }
